tests/ui/fail/fn-mismatch-unsafe-01.stderr
error: encountered mismatch in unsafety for #[union_fn] method
 --> tests/ui/fail/fn-mismatch-unsafe-01.rs:6:5
  |
6 |     unsafe fn bar() {}
  |     ^^^^^^

error: mismatch with this method
 --> tests/ui/fail/fn-mismatch-unsafe-01.rs:5:5
  |
5 |     fn foo() {}
  |     ^^
